--- a/Lab1/to-do-list.css
+++ b/Lab1/to-do-list.css
@@ -1,10 +1,10 @@
 .my-list{ 
-    background-color: #e3de54;
-    padding : 8px 24px; 
-    width: 500px; 
+    background-color: #9254e3;
+    padding : 10px 26px; 
+    width: 600px; 
     font-size: 30px;
     border: 1px solid #e3de54; 
-    box-shadow: 0 0 10px 2px #333333; 
+    box-shadow: 0 0 14px 4px #bd2e2e; 
     margin:auto; }
     ol{ margin:12px; }
      p{text-align: center; }
